Updates to index

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         5. mdi-file-folder-shared
       -->
       <li class="bold">
-        <a aria-label="Open Varad's resume in a new tab"
+        <a aria-label="Open Yuanlin's resume in a new tab"
           href="https://drive.google.com/file/d/1TD4Xq0b4mthCEAivgEA9Wel10rjQIkzi/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -180,8 +180,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="blue-grey-text">Varad
-        Bhogayata</a><span class="black-text light">Python Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="blue-grey-text">Yuanlin
+        Liu</a><span class="black-text light">Can you believe its me?</span>
     </div>
   </nav>
 
@@ -266,9 +266,9 @@
             <div class="caption">
               <h2>Hi, I'm <span class="blue">Yuanlin Liu.</span></h2>
               <h5><span style="color: #000679;">A</span>
-                <span>curious thinker, problem solver,process improver, strategy executioner.</span>
+                <span>curious thinker, problem solver, process improver, strategy executioner.</span>
               </h5>
-              <p>Small description...</p>
+              <p>MBA candidate at Simon Business School | 8+ years in Finance & Operations | Bridging Data-Driven Strategy with People-First Execution</p>
               
               <!-- <div class="social-panel-container" style="position: fixed;
               right: 0;
@@ -358,10 +358,26 @@
           </h2>
         </blockquote>
         <p>
-          About Me.
+          My professional journey is a testament to the power of adaptability and curiosity. 
+          I've navigated the fast-paced world of New York City restaurant operations for nearly a decade, 
+          managed the complexities of nonprofit finance, and harnessed the power of data to drive decisions. 
+          Each experience has reinforced my belief that true impact happens at the intersection of strategy and execution.
         </p>
         <p>
-          Another Paragraph
+          The common thread throughout my career has been a drive to improve processes and empower people. 
+          I thrive on creating efficiency, whether that means streamlining operations, 
+          building tools that give leaders better insight, or guiding a team through both routine and crisis. 
+          I've learned that the best solutions come from understanding the big picture while listening intently 
+          to the perspectives of those doing the day-to-day work.
+        </p>
+        <p>
+          As an MBA candidate at the Simon Business School, 
+          I am sharpening my analytical skills to complement my hands-on leadership experience. 
+          I am always eager to learn from new challenges, connect with people from all walks of life, 
+          and collaborate on solving complex problems. I'm excited to apply my unique blend of skills to my next chapter.
+        </p>
+        <p>
+          Talk with me about anything!
         </p>
         <!-- <p>
         <strong>Current Focus</strong>:&nbsp;<a aria-label="Navigate to the Inclusive Design Patterns homepage"
@@ -389,6 +405,7 @@
                     src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
+                <!-- WRITE YOUR EXPERIENCE BELOW!!!!"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="http://meditab.com" target="_blank"
@@ -865,7 +882,7 @@
 
                   <!-- Course 1 -->
                   <div class="col s12 m6 l6">
-                    <div class="card">
+                    <div class="card">  
                       <div class="card-image">
                         <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
                         <!-- <span class="card-title">Card Title</span> -->
@@ -1091,29 +1108,17 @@
       <h3 class="page-title white-text blue">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+918460816663</a></a>
-        </p>
-        <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Varad" href="mailto:yuanlinliu5@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:yuanlinliu5@gmail.com"
+              class="hoverline">yuanlinliu5@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
-        </p>
-        <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/yuanlin-liu" target="_blank"
+            data-position="top" data-tooltip="Yuanlin on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/yuanlin-liu"
+              class="hoverline" target="_blank">linkedin.com/in/yuanlin-liu</a></a>
         </p>
       </div>
     </section>
