--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/ylimage/Profile-Picture-SQ.jpg" class="circle img-responsive" alt="avatar" width="130px"
-            height="130px" style="display:block; margin: -25px; margin-left:-5.5px; margin-right: auto; 
-      max-width: 10rem; max-height: 10rem; border: 0.18rem hidden #000679; border-radius: 50%;">
+          <img src="/assets/img/ylimage/Profile-Picture-SQ.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
+
       <!-- <img src="/assets/img/ylimage/Profile-Picture-SQ.jpg" alt="Avatar"> -->
       <!-- <li class="logo">
         <p>profile</p>
@@ -259,8 +258,33 @@
         <a href="#about" class="scroll bnr-btn mr-2">Read more </a>
         <a href="#contact" class="scroll bnr-btn1">Contact Me </a>
       </div> -->
+<!-- NEW CONTAINER HEADING-->
+
 
       <div class="container">
+        <div class="col-md-9">
+          <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
+            <div class="caption">
+              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
+              <h5>MBA candidate at Simon Business School | 8+ years in Finance & Operations | Bridging Data-Driven Strategy with People-First Execution</h5>
+            </div>
+
+  <!-- typed.js -->
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script type="text/javascript">
+    var typed = new Typed('.typing',{
+      strings: ["Curious thinker", "Problem Solver", "Process Improver", "Strategy Executioner"],
+      loop: true,
+      typeSpeed: 100,
+      backSpeed: 60
+    });
+  </script>
+  <!-- typed.js -->
+
+<!-- OLD CONTAINER HEADING-->
+      <!--<div class="container">
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 20px;">
             <div class="caption">
@@ -269,7 +293,11 @@
                 <span>curious thinker, problem solver, process improver, strategy executioner.</span>
               </h5>
               <p>MBA candidate at Simon Business School | 8+ years in Finance & Operations | Bridging Data-Driven Strategy with People-First Execution</p>
-              
+              -->
+<!-- OLD CONTAINER HEADING-->
+
+
+
               <!-- <div class="social-panel-container" style="position: fixed;
               right: 0;
               bottom: 80px;
@@ -322,9 +350,6 @@
               <button class="icon-btn linkedin"> 
                 <i class="fa fa-linkedin"></i>
               </button>
-              <button class="icon-btn github"> 
-                <i class="fa fa-github"></i>
-              </button>
             </div>
             <div class='buttons'>
               <a href="#about" style="position: relative; padding: 11px 35px; background: none; color: #fff; 
@@ -354,7 +379,7 @@
       <div class="container flow-text">
         <blockquote>
           <h2>
-            Mission-driven python developer with a passion for Artificial Intelligence and Web Development.
+            "The important thing is not to stop questioning. Curiosity has its own reason for existing."
           </h2>
         </blockquote>
         <p>
@@ -1108,16 +1133,16 @@
       <h3 class="page-title white-text blue">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Email Varad" href="mailto:yuanlinliu5@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:yuanlinliu5@gmail.com"
+          <a aria-label="Email Yuanlin" href="mailto:yuanlinliu5@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Yuanlin" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Yuanlin" href="mailto:yuanlinliu5@gmail.com"
               class="hoverline">yuanlinliu5@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/yuanlin-liu" target="_blank"
+          <a aria-label="View Yuanlin on LinkedIn" href="http://linkedin.com/in/yuanlin-liu" target="_blank"
             data-position="top" data-tooltip="Yuanlin on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/yuanlin-liu"
+              class="fa fa-linkedin"></i><a aria-label="Yuanlin on LinkedIn" href="http://linkedin.com/in/yuanlin-liu"
               class="hoverline" target="_blank">linkedin.com/in/yuanlin-liu</a></a>
         </p>
       </div>
