update to photo and index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta property="article:publisher" content="yuanlin-liu.github.io" />
   <meta property="og:image" content="" />
 
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="author" content="Yuanlin Liu" />
   <meta name="description" content="The fault, dear Brutus, is not in our stars, but in ourselves" />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
@@ -68,7 +68,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/ylimage/Profile-Picture-SQ.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/Profile-Picture-SQ.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -265,7 +265,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="blue">Yuanlin Liu.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>MBA candidate at Simon Business School | 8+ years in Finance & Operations | Bridging Data-Driven Strategy with People-First Execution</h5>
