--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="" target="_blank"><img alt="Happy Hot Hunan logo"
+                    src="/assets/img/HHHLogo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
                 <!-- WRITE YOUR EXPERIENCE BELOW!!!!"> -->
@@ -469,15 +469,15 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.brilla.edu" target="_blank"><img alt="Mtag logo" 
-                    src="/assets/img/exp-mtag-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://brillaschools.org/" target="_blank"><img alt="Brilla logo" 
+                    src="/assets/img/Brillalogo.jpg" class="responsive-img center-block" /></a>
 
               </div>
 <!-- Changes here -->
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
+                  <span class="card-title"><a href="https://brillaschools.org/" target="_blank"
                       class="blue-text hoverline">Brilla Charter Schools</a></span>
                 </p>
               </div>
@@ -515,18 +515,18 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.fingerlakeswealthmanagement.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                <a href="https://www.fingerlakeswm.com/" target="_blank"><img alt="Fingerlakes WM logo"
+                    src="/assets/img/FingerlakeswmLogo.svg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="blue-text hoverline">Fingerlakes Wealth Management</a></span>
+                  <span class="card-title"><a href="https://www.fingerlakeswm.com/" target="_blank"
+                      class="blue-text hoverline">Fingerlakes WM</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Investment and Operations Analyst Intern</div>
+            <div class="role brown-text text-darken-2">Investment & Operations Analyst Intern</div>
             <ul>
               <li>
                 Reconciled and rectified over 200 historical transactional errors in client portfolios (AUM 600M) over last three years.
@@ -545,7 +545,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>January 2014 - May 2014 | Ahmedabad, India</span>
+            <span>January 2014 - May 2014 | Ithaca, New York</span>
           </div>
         </div>
 
@@ -807,15 +807,15 @@
             <h4 class="brown-text light">Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />English (Native)
+                <img alt="" src="/assets/img/USFlag.png" class="responsive-img" />English (Native)
               </div>
               <!--Replace with USA flag-->
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />Chinese (Native)
+                <img alt="" src="/assets/img/ChinaFlag.png" class="responsive-img" />Chinese (Native)
               </div>
               <!--Replace with chinese flag-->
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />Spansih (Conversational)
+                <img alt="" src="/assets/img/SpainFlag.png" class="responsive-img" />Spanish (Conversational)
               </div>
               <!--Replace with spanish flag-->
               <!-- <div class="col s4 m2">
@@ -833,22 +833,22 @@
             <h4 class="brown-text light">Interests</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />Chess
+                <img alt="" src="/assets/img/Chesslogo.png" class="responsive-img" />Chess
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Computer repair
+                <img alt="" src="/assets/img/ComputerRepair Logo.png" class="responsive-img" />Computer repair
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />Baseball
+                <img alt="" src="/assets/img/Yankeeslogo.png" class="responsive-img" />Baseball
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />Creating Efficiency Charts
+                <img alt="" src="/assets/img/chartlogo.png" class="responsive-img" />Creating Efficiency Charts
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />Strategy Games
+                <img alt="" src="/assets/img/StrategyLogo.png" class="responsive-img" />Strategy Games
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />Photography
+                <img alt="" src="/assets/img/Photographylogo.png" class="responsive-img" />Photography
               </div>
             </div>
           </div>
@@ -1120,7 +1120,7 @@
                 </p>
                 <p class="brown-text">Rochester, New York</p>
                 <p>
-                  <b>Degree: </b>Master of Business Administration
+                  <b>Degree: </b>MBA
                   <br>
                   <b>Concentrations: </b>Consulting and Finance
                   <br> 
