Updated most logos

--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark indigo-text"><i
             class="mdi-av-web small"></i><span>Projects</span></a>
       </li> -->
+      <!--Removes projects
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
-
+-->
 
       <!-- <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i
@@ -127,8 +128,8 @@
         mdi-social-poll
       -->
       <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+        <a aria-label="Navigate to the Additional Information section" href="#Additional Information" class="waves-effect waves-dark blue-text"><i
+            class="mdi-action-assessment small"></i><span>Additional Info</span></a>
       </li>
       <!-- <li class="bold">
         <a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i
@@ -202,8 +203,8 @@
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+        <a aria-label="Navigate to the Additional Information section" href="#Additional Information" class="waves-effect waves-dark blue-text"><i
+            class="mdi-action-assessment small"></i><span>Additional Info</span></a>
       </li>
       <!-- <li class="bold">
         <a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i
