updated font again

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
       <h3 class="page-title white-text blue">About</h3>
-      <div class="container flow-text" style="font-size: .85em;">
+      <div class="container flow-text" style="font-size: 1em;">
         <blockquote>
           <h2>
             "The important thing is not to stop questioning. Curiosity has its own reason for existing."
