--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Additional Information section" href="#Additional Information" class="waves-effect waves-dark blue-text"><i
+        <a aria-label="Navigate to the Additional Information section" href="#Additional-Information" class="waves-effect waves-dark blue-text"><i
             class="mdi-action-assessment small"></i><span>Additional Info</span></a>
       </li>
       <!-- <li class="bold">
@@ -805,7 +805,7 @@
     </section>
 
     <!-- Fifth Section: Skills -->
-    <section id="skills" class="section scrollspy">
+    <section id="Additional-Information" class="section scrollspy">
       <h3 class="page-title white-text blue">Additional Information</h3>
       <div class="container">
         <!-- Languages and Databases -->
