Give about section more spacing and removed a div to improve structure.

--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
 
             -->
             <div class='buttons'>
-              <a href="#about" style="position: relative; padding: 11px 35px; background: none; color: #fff; 
+            
+            <a href="#about" style="position: relative; padding: 11px 35px; background: none; color: #fff; 
             border: 2px solid #fff; font-weight: 600; font-size: 15px; letter-spacing: 1px; 
             display: inline-block; border-radius: 4px; 
             -webkit-border-radius: 4px;">Read More</a>
@@ -370,12 +371,13 @@
             border: 2px solid #fff; font-weight: 600; font-size: 15px; letter-spacing: 1px;
             display: inline-block; margin-top: 1em; border-radius: 4px;
             -webkit-border-radius: 4px;">Contact Me</a>
-            </div>
-            
-            <a href="http://linkedin.com/in/yuanlin-liu" style="position: relative; padding: 11px 35px; background: none; color: #fff; border: 2px solid #fff; font-weight: 600; 
-            font-size: 15px; letter-spacing: 1px; display: inline-block; margin-top: 1em; border-radius: 4px;
+
+            <a href="http://linkedin.com/in/yuanlin-liu" style="position: relative; padding: 11px 35px; background: none; color: #fff; 
+            border: 2px solid #fff; font-weight: 600; font-size: 15px; letter-spacing: 1px;
+            display: inline-block; margin-top: 1em; border-radius: 4px;
             -webkit-border-radius: 4px;">My LinkedIn</a>
             </div>
+
 
           </div>
         </div>
